# UVIT_Analysis

./: .gitignore  README.md  analyze_thresholds.py  galex_extended_sources.fit  get_photometry.py  get_threshholds.py  liu2020_ucd_candidates.fit  make_backgrounds.py  make_backgrounds_m87.py  ngvs_gals_class0.reg  ngvs_gals_class1.reg  ngvs_gals_class2.reg  pyproject.toml  uvit_fields_headers.py
